# qc2

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  environment.yml  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
.dev/: dev.md  qc2nl.drawio
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat  qc2_workflow.drawio  references.bib  requirements.txt
docs/algorithms/: index.rst  oo_vqe_class.rst  vqe_class.rst
docs/ase/: building_qc2_ASEs.rst  index.rst  running_qc2_ASEs.rst
examples/: ase_Atoms_model_save.py  ase_G2_molecule_model_save.py  ase_model_load.py  carbon_ase_pyscf.hdf5  fcidump_vqe_qiskit_h2.py  h2_ase_ams_qiskit.hdf5  iqpe_pennylane_h2o.py  iqpe_qiskit_h2o.py  oo_vqe_pennylane_water.py  oo_vqe_qiskit_water.py  plams.py  psi4_vqe_qiskit_h2o.py  qpe_pennylane_h2o.py  qpe_qiskit_h2o.py  rose_fcidump_vqe_qiskit_h2o.py  sa_oo_vqe_pennylane_water.py  sa_oo_vqe_qiskit_water.py  vqe_ams_qiskit_h2.py  vqe_pennylane_h2.py  vqe_pennylane_h2o.py  vqe_pennylane_pyscf_ase_h2o.py  vqe_qiskit_carbon.py  vqe_qiskit_ch.py  vqe_qiskit_dirac_ase_h2.py  vqe_qiskit_dirac_ase_h2_minus.py  vqe_qiskit_from_file_h2.py  vqe_qiskit_h2.py  vqe_qiskit_h2o.py  vqe_qiskit_pyscf_ase_h2.py  vqe_qiskit_pyscf_ase_h2_minus.py  vqe_qiskit_pyscf_ase_h2o.py  vqe_qiskit_pyscf_ase_triplet_carbon.py
qc2/: __init__.py  my_module.py
tests/: __init__.py  calculator_example_rose.py  clean_up.sh  genibo.x  rose.out  rose_ammonia_water_example.py  rose_ferrocene_example.py  rose_new_model.py  rose_test_functions.py  rose_water_example.py  test_dirac_ase.py  test_my_module.py  test_pyscf_ase.py  test_qc2data_class.py  test_rose_ase_pyscf-ferrocene.py  test_rose_ase_pyscf-water-ammonia.out  test_rose_ase_pyscf-water-ammonia.py  test_rose_ase_pyscf-water-ammonia.stdout  test_rose_ase_pyscf-water.py  test_save.h5
(+173 files in other folders)
