# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Nicolas Renaud
author_email = n.renaud@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Bridging Quantum Chemistry and Quantum Computing
keywords =
    quantum computing
    quantum chemistry
long_description = file: README.md
long_description_content_type = text/markdown
name = qc2
project_urls =
    Bug Tracker = git@github.com:qc2nl/qc2/issues
url = git@github.com:qc2nl/qc2
version = 0.1.0

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    pytest
    h5py
    ase
    pyscf
    qiskit
    qiskit-nature
    qiskit-algorithms

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    sphinxcontrib-bibtex
    sphinx-copybutton
    nbsphinx
    tox
    myst_parser
    jupyter
publishing =
    twine
    wheel
psi4 =
    # must be installed via conda or from source
pennylane =
    pennylane
    pennylane-qiskit

[options.packages.find]
include = qc2, qc2.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = qc2
src_paths = qc2,tests
line_length = 120
